objects/Jobs__c.object
<CustomObject>
    <fields>
        <fullName>Mail_contact__c</fullName>
        <label>Mail contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tel_contact__c</fullName>
        <label>Tel contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>employeur__c</fullName>
        <label>employeur</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Jobs</label>
    <nameField>
        <label>Nom de Jobs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>